fixed overflow-x/deleted link

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -23,7 +23,7 @@
     display: flex;
     gap: 20px;
     margin-bottom: 20px;
-    overflow-y: hidden;
+    overflow: hidden;
 
     @include onTablet {
       margin-bottom: 32px;
@@ -35,7 +35,6 @@
       gap: 30px;
       width: 100%;
       margin-bottom: 0;
-      overflow-y: visible;
     }
   }
 
